...
    case timePreference
    case isRecurring

    var label: String {
        switch self {
        case .priority: return "Priority"
        case .status: return "Status"
        case .dueDate: return "Due Date"
        case .tag: return "Tag"
        case .list: return "List"
        case .title: return "Title"
        case .isNote: return "Is Note"
        case .timePreference: return "Time Preference"
        case .isRecurring: return "Is Recurring"
        }
    }
...
